@@ -9,6 +9,7 @@ Thanks!
 2.0.0.2016
 ----------
 - Added Traditional Chinese localisation. (Thanks to Weizhong Yang).
+- Accept HTTP 200 responses with no data as meaning 0 new articles rather than an error.
 
 2.0.0.2015
 ----------
